# libaegis

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
include/aegis/: aegis.h  io.h  key_code.h  network.h  pipeline.h
includes/aegis/: aegis.h  app.h  context.h  exception.h  input.h  key_code.h  pipeline.h  system_time.h  uuid.h  video_source.h
src/: aegis.cpp  aegis.cppm  app.cpp  context.cpp  exception.cpp  io.cpp  pipeline.cpp  uuid.cpp  video_source.cpp
